NAS-123811: Fix extra scrollbar on Apps

--- a/src/app/pages/apps/components/installed-apps/installed-apps.component.scss
+++ b/src/app/pages/apps/components/installed-apps/installed-apps.component.scss
@@ -3,7 +3,7 @@
 $singlecolumn-max-width: ($card-width-slim + $gap * 2);
 $dualcolumn-slim-max-width: ($card-width-slim * 2 + $gap * 2);
 $scrollbar-offset: 20px;
-$header-height: 192px;
+$header-height: 193px;
 
 :host {
   display: block;
